mobile card home fix

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
         <!-- carousel end -->
 
         <!-- triple column content section starts-->
-        <div class="triple-column mx-auto mb-5">
-            <div class="container text-center mx-auto">
-                <div class="row mx-auto">
-                <div class="col mx-auto">
+        <div class="triple-column mb-5">
+            <div class="container text-center">
+                <div class="row">
+                <div class="col mx-3">
                     <div class="card card-custom mx-auto mb-5">
                         <div class="card-body">
                           <h5 class="card-title">Lorem Ipsum</h5>
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col mx-3">
                     <div class="card card-custom mx-auto mb-5">
                         <div class="card-body">
                           <h5 class="card-title">Lorem Ipsum</h5>
@@ -86,7 +86,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col mx-3">
                     <div class="card card-custom mx-auto mb-5">
                         <div class="card-body">
                           <h5 class="card-title">Lorem Ipsum</h5>
