--- a/products.html
+++ b/products.html
@@ -48,7 +48,7 @@
         <div class="triple-column mx-auto mb-5">
             <div class="container-fluid text-center mx-auto">
                 <div class="row mx-auto">
-                    <div class="col mx-auto">
+                    <div class="col mx-3">
                         <div class="card card-custom mx-2 mb-5">
                             <div class="row no-gutters">
                                 <div class="col-sm-5">
@@ -64,7 +64,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col mx-auto">
+                    <div class="col mx-3">
                         <div class="card card-custom mx-2 mb-5">
                             <div class="row no-gutters">
                                 <div class="col-sm-5">
@@ -80,57 +80,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col mx-auto">
-                        <div class="card card-custom mx-2 mb-5">
-                            <div class="row no-gutters">
-                                <div class="col-sm-5">
-                                    <img class="card-img" src="assets/logo.png" alt="Shopping Item">
-                                </div>
-                                <div class="col-sm-7">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Sample Item</h5>
-                                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, labore.</p>
-                                        <a href="#" class="btn btn-primary">View Profile</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row mx-auto">
-                    <div class="col mx-auto">
-                        <div class="card card-custom mx-2 mb-5">
-                            <div class="row no-gutters">
-                                <div class="col-sm-5">
-                                    <img class="card-img" src="assets/logo.png" alt="Shopping Item">
-                                </div>
-                                <div class="col-sm-7">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Sample Item</h5>
-                                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, labore.</p>
-                                        <a href="#" class="btn btn-primary">View Profile</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col mx-auto">
-                        <div class="card card-custom mx-2 mb-5">
-                            <div class="row no-gutters">
-                                <div class="col-sm-5">
-                                    <img class="card-img" src="assets/logo.png" alt="Shopping Item">
-                                </div>
-                                <div class="col-sm-7">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Sample Item</h5>
-                                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, labore.</p>
-                                        <a href="#" class="btn btn-primary">View Profile</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col mx-auto">
+                    <div class="col mx-3">
                         <div class="card card-custom mx-2 mb-5">
                             <div class="row no-gutters">
                                 <div class="col-sm-5">
@@ -148,7 +98,7 @@
                     </div>
                 </div>
                 <div class="row mx-auto">
-                    <div class="col mx-auto">
+                    <div class="col mx-3">
                         <div class="card card-custom mx-2 mb-5">
                             <div class="row no-gutters">
                                 <div class="col-sm-5">
@@ -164,7 +114,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col mx-auto">
+                    <div class="col mx-3">
                         <div class="card card-custom mx-2 mb-5">
                             <div class="row no-gutters">
                                 <div class="col-sm-5">
@@ -180,7 +130,57 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col mx-auto">
+                    <div class="col mx-3">
+                        <div class="card card-custom mx-2 mb-5">
+                            <div class="row no-gutters">
+                                <div class="col-sm-5">
+                                    <img class="card-img" src="assets/logo.png" alt="Shopping Item">
+                                </div>
+                                <div class="col-sm-7">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Sample Item</h5>
+                                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, labore.</p>
+                                        <a href="#" class="btn btn-primary">View Profile</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mx-auto">
+                    <div class="col mx-3">
+                        <div class="card card-custom mx-2 mb-5">
+                            <div class="row no-gutters">
+                                <div class="col-sm-5">
+                                    <img class="card-img" src="assets/logo.png" alt="Shopping Item">
+                                </div>
+                                <div class="col-sm-7">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Sample Item</h5>
+                                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, labore.</p>
+                                        <a href="#" class="btn btn-primary">View Profile</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mx-3">
+                        <div class="card card-custom mx-2 mb-5">
+                            <div class="row no-gutters">
+                                <div class="col-sm-5">
+                                    <img class="card-img" src="assets/logo.png" alt="Shopping Item">
+                                </div>
+                                <div class="col-sm-7">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Sample Item</h5>
+                                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, labore.</p>
+                                        <a href="#" class="btn btn-primary">View Profile</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mx-3">
                         <div class="card card-custom mx-2 mb-5">
                             <div class="row no-gutters">
                                 <div class="col-sm-5">
