--- a/products.html
+++ b/products.html
@@ -52,7 +52,7 @@
                         <div class="card card-custom mx-2 mb-5">
                             <div class="row no-gutters">
                                 <div class="col-sm-5">
-                                    <img class="card-img" src="assets/logo.png" alt="Shopping Item">
+                                    <img class="card-img card-img-custom" src="assets/products/product1.png" alt="Shopping Item">
                                 </div>
                                 <div class="col-sm-7">
                                     <div class="card-body">
@@ -68,7 +68,7 @@
                         <div class="card card-custom mx-2 mb-5">
                             <div class="row no-gutters">
                                 <div class="col-sm-5">
-                                    <img class="card-img" src="assets/logo.png" alt="Shopping Item">
+                                    <img class="card-img card-img-custom" src="assets/products/product2.png" alt="Shopping Item">
                                 </div>
                                 <div class="col-sm-7">
                                     <div class="card-body">
@@ -84,57 +84,7 @@
                         <div class="card card-custom mx-2 mb-5">
                             <div class="row no-gutters">
                                 <div class="col-sm-5">
-                                    <img class="card-img" src="assets/logo.png" alt="Shopping Item">
-                                </div>
-                                <div class="col-sm-7">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Sample Item</h5>
-                                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, labore.</p>
-                                        <a href="#" class="btn btn-primary">View Profile</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row mx-auto">
-                    <div class="col mx-3">
-                        <div class="card card-custom mx-2 mb-5">
-                            <div class="row no-gutters">
-                                <div class="col-sm-5">
-                                    <img class="card-img" src="assets/logo.png" alt="Shopping Item">
-                                </div>
-                                <div class="col-sm-7">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Sample Item</h5>
-                                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, labore.</p>
-                                        <a href="#" class="btn btn-primary">View Profile</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col mx-3">
-                        <div class="card card-custom mx-2 mb-5">
-                            <div class="row no-gutters">
-                                <div class="col-sm-5">
-                                    <img class="card-img" src="assets/logo.png" alt="Shopping Item">
-                                </div>
-                                <div class="col-sm-7">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Sample Item</h5>
-                                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, labore.</p>
-                                        <a href="#" class="btn btn-primary">View Profile</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col mx-3">
-                        <div class="card card-custom mx-2 mb-5">
-                            <div class="row no-gutters">
-                                <div class="col-sm-5">
-                                    <img class="card-img" src="assets/logo.png" alt="Shopping Item">
+                                    <img class="card-img card-img-custom" src="assets/products/product3.png" alt="Shopping Item">
                                 </div>
                                 <div class="col-sm-7">
                                     <div class="card-body">
@@ -152,7 +102,7 @@
                         <div class="card card-custom mx-2 mb-5">
                             <div class="row no-gutters">
                                 <div class="col-sm-5">
-                                    <img class="card-img" src="assets/logo.png" alt="Shopping Item">
+                                    <img class="card-img card-img-custom" src="assets/products/product4.png" alt="Shopping Item">
                                 </div>
                                 <div class="col-sm-7">
                                     <div class="card-body">
@@ -168,7 +118,7 @@
                         <div class="card card-custom mx-2 mb-5">
                             <div class="row no-gutters">
                                 <div class="col-sm-5">
-                                    <img class="card-img" src="assets/logo.png" alt="Shopping Item">
+                                    <img class="card-img card-img-custom" src="assets/products/product5.png" alt="Shopping Item">
                                 </div>
                                 <div class="col-sm-7">
                                     <div class="card-body">
@@ -184,7 +134,57 @@
                         <div class="card card-custom mx-2 mb-5">
                             <div class="row no-gutters">
                                 <div class="col-sm-5">
-                                    <img class="card-img" src="assets/logo.png" alt="Shopping Item">
+                                    <img class="card-img card-img-custom" src="assets/products/product6.png" alt="Shopping Item">
+                                </div>
+                                <div class="col-sm-7">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Sample Item</h5>
+                                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, labore.</p>
+                                        <a href="#" class="btn btn-primary">View Profile</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mx-auto">
+                    <div class="col mx-3">
+                        <div class="card card-custom mx-2 mb-5">
+                            <div class="row no-gutters">
+                                <div class="col-sm-5">
+                                    <img class="card-img card-img-custom" src="assets/products/product7.png" alt="Shopping Item">
+                                </div>
+                                <div class="col-sm-7">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Sample Item</h5>
+                                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, labore.</p>
+                                        <a href="#" class="btn btn-primary">View Profile</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mx-3">
+                        <div class="card card-custom mx-2 mb-5">
+                            <div class="row no-gutters">
+                                <div class="col-sm-5">
+                                    <img class="card-img card-img-custom" src="assets/products/product8.png" alt="Shopping Item">
+                                </div>
+                                <div class="col-sm-7">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Sample Item</h5>
+                                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, labore.</p>
+                                        <a href="#" class="btn btn-primary">View Profile</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mx-3">
+                        <div class="card card-custom mx-2 mb-5">
+                            <div class="row no-gutters">
+                                <div class="col-sm-5">
+                                    <img class="card-img card-img-custom" src="assets/products/product9.png" alt="Shopping Item">
                                 </div>
                                 <div class="col-sm-7">
                                     <div class="card-body">
