--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div id="carouselExample" class="carousel carousel-custom slide my-5 mx-auto">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="assets/graphics1.jpeg" class="d-block w-100" alt="carousel graphics">
+                <img src="assets/banner.png" class="d-block w-100" alt="carousel graphics">
               </div>
               <div class="carousel-item">
                 <img src="assets/graphics2.jpeg" class="d-block w-100" alt="carousel graphics">
