--- a/products.html
+++ b/products.html
@@ -56,9 +56,9 @@
                                 </div>
                                 <div class="col-sm-7">
                                     <div class="card-body">
-                                        <h5 class="card-title">Sample Item</h5>
-                                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, labore.</p>
-                                        <a href="#" class="btn btn-primary">View Profile</a>
+                                        <h5 class="card-title">iHolo 4</h5>
+                                        <p class="card-text">Grab your iHolo 4 today, now with Ocular ID and Biometrics Scanning Features.</p>
+                                        <a href="#" class="btn btn-primary">$1,999.99</a>
                                     </div>
                                 </div>
                             </div>
@@ -72,9 +72,9 @@
                                 </div>
                                 <div class="col-sm-7">
                                     <div class="card-body">
-                                        <h5 class="card-title">Sample Item</h5>
-                                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, labore.</p>
-                                        <a href="#" class="btn btn-primary">View Profile</a>
+                                        <h5 class="card-title">Holo Lens</h5>
+                                        <p class="card-text">The new and improved Holo Lens now features olfactory sensors and sprinklers.</p>
+                                        <a href="#" class="btn btn-primary">$567.89</a>
                                     </div>
                                 </div>
                             </div>
@@ -88,9 +88,9 @@
                                 </div>
                                 <div class="col-sm-7">
                                     <div class="card-body">
-                                        <h5 class="card-title">Sample Item</h5>
-                                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, labore.</p>
-                                        <a href="#" class="btn btn-primary">View Profile</a>
+                                        <h5 class="card-title">Bio Arm</h5>
+                                        <p class="card-text">Have trouble touching your elbow with your hand? Bio Arm now comes with triple joints.</p>
+                                        <a href="#" class="btn btn-primary">$999.69</a>
                                     </div>
                                 </div>
                             </div>
@@ -106,9 +106,9 @@
                                 </div>
                                 <div class="col-sm-7">
                                     <div class="card-body">
-                                        <h5 class="card-title">Sample Item</h5>
-                                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, labore.</p>
-                                        <a href="#" class="btn btn-primary">View Profile</a>
+                                        <h5 class="card-title">Jetpack Pro</h5>
+                                        <p class="card-text">Better in every way, the new jetpack pro comes with built-in GPS and Navigation.</p>
+                                        <a href="#" class="btn btn-primary">$1,234.56</a>
                                     </div>
                                 </div>
                             </div>
@@ -122,9 +122,9 @@
                                 </div>
                                 <div class="col-sm-7">
                                     <div class="card-body">
-                                        <h5 class="card-title">Sample Item</h5>
-                                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, labore.</p>
-                                        <a href="#" class="btn btn-primary">View Profile</a>
+                                        <h5 class="card-title">Jet Jet 9000</h5>
+                                        <p class="card-text">More Fire, More Power. Now running on Flaming Hot Cheetos, speeds can reach 5000mps.</p>
+                                        <a href="#" class="btn btn-primary">$0.99</a>
                                     </div>
                                 </div>
                             </div>
@@ -138,9 +138,9 @@
                                 </div>
                                 <div class="col-sm-7">
                                     <div class="card-body">
-                                        <h5 class="card-title">Sample Item</h5>
-                                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, labore.</p>
-                                        <a href="#" class="btn btn-primary">View Profile</a>
+                                        <h5 class="card-title">Hoverboard Mk V.</h5>
+                                        <p class="card-text">Need a refill? Nah. <br> The Mk V can use Electromagnetic Fields to recharge.</p>
+                                        <a href="#" class="btn btn-primary">$42,069.21</a>
                                     </div>
                                 </div>
                             </div>
@@ -156,9 +156,9 @@
                                 </div>
                                 <div class="col-sm-7">
                                     <div class="card-body">
-                                        <h5 class="card-title">Sample Item</h5>
-                                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, labore.</p>
-                                        <a href="#" class="btn btn-primary">View Profile</a>
+                                        <h5 class="card-title">Virtuo Car</h5>
+                                        <p class="card-text">900 Horsepower, Hydraulic Seats, and Unicorn Helmets. What else could you need?</p>
+                                        <a href="#" class="btn btn-primary">$65,272.85</a>
                                     </div>
                                 </div>
                             </div>
@@ -172,9 +172,9 @@
                                 </div>
                                 <div class="col-sm-7">
                                     <div class="card-body">
-                                        <h5 class="card-title">Sample Item</h5>
-                                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, labore.</p>
-                                        <a href="#" class="btn btn-primary">View Profile</a>
+                                        <h5 class="card-title">Led Bike</h5>
+                                        <p class="card-text">Just a motorbike figurine, comes with LEDs and display stand. Some assembly required.</p>
+                                        <a href="#" class="btn btn-primary">$1,000,000.00</a>
                                     </div>
                                 </div>
                             </div>
@@ -188,9 +188,9 @@
                                 </div>
                                 <div class="col-sm-7">
                                     <div class="card-body">
-                                        <h5 class="card-title">Sample Item</h5>
-                                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, labore.</p>
-                                        <a href="#" class="btn btn-primary">View Profile</a>
+                                        <h5 class="card-title">Bionic Brain</h5>
+                                        <p class="card-text">Why think when you can have the Bionic Brain do it for you? Only available in select languages.</p>
+                                        <a href="#" class="btn btn-primary">$0.01</a>
                                     </div>
                                 </div>
                             </div>
