--- a/index.html
+++ b/index.html
@@ -68,27 +68,27 @@
                 <div class="col mx-3">
                     <div class="card card-custom mx-auto mb-5">
                         <div class="card-body">
-                          <h5 class="card-title">Lorem Ipsum</h5>
-                          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, dolorum.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <h5 class="card-title">Super</h5>
+                          <p class="card-text">We strive for greatness in all aspects of our products and inventory.</p>
+                          <a href="products.html" class="btn btn-primary">Visit Products</a>
                         </div>
                     </div>
                 </div>
                 <div class="col mx-3">
                     <div class="card card-custom mx-auto mb-5">
                         <div class="card-body">
-                          <h5 class="card-title">Lorem Ipsum</h5>
-                          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, enim.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <h5 class="card-title">Cool</h5>
+                          <p class="card-text">If you see an item you'd like us to carry within our directory, feel free to let us know.</p>
+                          <a href="#" class="btn btn-primary">Item Request Form</a>
                         </div>
                     </div>
                 </div>
                 <div class="col mx-3">
                     <div class="card card-custom mx-auto mb-5">
                         <div class="card-body">
-                          <h5 class="card-title">Lorem Ipsum</h5>
-                          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, enim.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <h5 class="card-title">Tech</h5>
+                          <p class="card-text">100% Authenticity Guarantee with all items and services or your money back. Full Refund.</p>
+                          <a href="#" class="btn btn-primary">File a Dispute</a>
                         </div>
                     </div>
                 </div>
