--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="container text-center">
                 <div class="row">
                 <div class="col mx-3">
-                    <div class="card card-custom mx-auto mb-5">
+                    <div class="card card-custom mx-3 mb-5">
                         <div class="card-body">
                           <h5 class="card-title">Super</h5>
                           <p class="card-text">We strive for greatness in all aspects of our products and inventory.</p>
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="col mx-3">
-                    <div class="card card-custom mx-auto mb-5">
+                    <div class="card card-custom mx-3 mb-5">
                         <div class="card-body">
                           <h5 class="card-title">Cool</h5>
                           <p class="card-text">If you see an item you'd like us to carry within our directory, feel free to let us know.</p>
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <div class="col mx-3">
-                    <div class="card card-custom mx-auto mb-5">
+                    <div class="card card-custom mx-3 mb-5">
                         <div class="card-body">
                           <h5 class="card-title">Tech</h5>
                           <p class="card-text">100% Authenticity Guarantee with all items and services or your money back. Full Refund.</p>
