card text change index html

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <div class="card card-custom mx-3 mb-5">
                         <div class="card-body">
                           <h5 class="card-title">Tech</h5>
-                          <p class="card-text">100% Authenticity Guarantee with all items and services or your money back. Full Refund.</p>
+                          <p class="card-text">100% Authenticity Guarantee with all items and services or your money back.</p>
                           <a href="#" class="btn btn-primary">File a Dispute</a>
                         </div>
                     </div>
