--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!-- navbar end -->
 
         <!-- carousel start -->
-        <div id="carouselExample" class="carousel carousel-custom slide my-5 mx-auto">
+        <div id="carouselExample" class="carousel carousel-custom slide my-5 mx-auto" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img src="assets/banner1.png" class="d-block w-100" alt="carousel graphics">
@@ -68,7 +68,7 @@
                 <div class="col mx-3">
                     <div class="card card-custom mx-3 mb-5">
                         <div class="card-body">
-                          <h5 class="card-title">Super</h5>
+                          <h5 class="card-title"><button id="easterEgg1">Super</button></h5>
                           <p class="card-text">We strive for greatness in all aspects of our products and inventory.</p>
                           <a href="products.html" class="btn btn-primary">Visit Products</a>
                         </div>
@@ -77,7 +77,7 @@
                 <div class="col mx-3">
                     <div class="card card-custom mx-3 mb-5">
                         <div class="card-body">
-                          <h5 class="card-title">Cool</h5>
+                          <h5 class="card-title"><button id="easterEgg2">Cool</button></h5>
                           <p class="card-text">If you see an item you'd like us to carry within our directory, feel free to let us know.</p>
                           <a href="#" class="btn btn-primary">Item Request Form</a>
                         </div>
@@ -86,7 +86,7 @@
                 <div class="col mx-3">
                     <div class="card card-custom mx-3 mb-5">
                         <div class="card-body">
-                          <h5 class="card-title">Tech</h5>
+                          <h5 class="card-title"><button id="easterEgg3">Tech</button></h5>
                           <p class="card-text">100% Authenticity Guarantee with all items and services or your money back.</p>
                           <a href="#" class="btn btn-primary">File a Dispute</a>
                         </div>
@@ -96,8 +96,33 @@
             </div>
         </div>
         <!-- triple column content section ends-->
+        <p id="count"></p>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>    
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+        <script>
+          var count = 0;
+          var button = document.getElementById("easterEgg1");
+          var countDisplay = document.getElementById("count");
+          button.addEventListener("click", function() {
+          count++;
+          if (count === 3) {
+            window.location.href = "snake.html"
+          }});
+          var button2 = document.getElementById("easterEgg2");
+          var countDisplay = document.getElementById("count");
+          button2.addEventListener("click", function() {
+          count++;
+          if (count === 3) {
+            window.location.href = "snake.html"
+          }});
+          var button3 = document.getElementById("easterEgg3");
+          var countDisplay = document.getElementById("count");
+          button3.addEventListener("click", function() {
+          count++;
+          if (count === 3) {
+            window.location.href = "snake.html"
+          }});
+        </script>
 
     </body>
     <footer>
