--- a/snake.html
+++ b/snake.html
@@ -125,7 +125,7 @@ function loop() {
 
     // check collision with all cells after this one (modified bubble sort)
     for (var i = index + 1; i < snake.cells.length; i++) {
-      
+
       // snake occupies same space as a body part. reset game
       if (cell.x === snake.cells[i].x && cell.y === snake.cells[i].y) {
         snake.x = 160;
@@ -144,11 +144,11 @@ function loop() {
 
 // listen to keyboard events to move the snake
 document.addEventListener('keydown', function(e) {
-  // prevent snake from backtracking on itself by checking that it's 
+  // prevent snake from backtracking on itself by checking that it's
   // not already moving on the same axis (pressing left while moving
   // left won't do anything, and pressing right while moving left
   // shouldn't let you collide with your own body)
-  
+
   // left arrow key
   if (e.which === 37 && snake.dx === 0) {
     snake.dx = -grid;
@@ -170,6 +170,60 @@ document.addEventListener('keydown', function(e) {
     snake.dx = 0;
   }
 });
+
+document.addEventListener('touchstart', handleTouchStart, false);
+document.addEventListener('touchmove', handleTouchMove, false);
+
+var xDown = null;
+var yDown = null;
+
+function getTouches(evt) {
+  return evt.touches ||             // browser API
+         evt.originalEvent.touches; // jQuery
+}
+
+function handleTouchStart(evt) {
+    const firstTouch = getTouches(evt)[0];
+    xDown = firstTouch.clientX;
+    yDown = firstTouch.clientY;
+};
+
+function handleTouchMove(evt) {
+    if ( ! xDown || ! yDown ) {
+        return;
+    }
+
+    var xUp = evt.touches[0].clientX;
+    var yUp = evt.touches[0].clientY;
+
+    var xDiff = xDown - xUp;
+    var yDiff = yDown - yUp;
+
+    if ( Math.abs( xDiff ) > Math.abs( yDiff ) ) {/*most significant*/
+        if ( xDiff > 0 ) {
+            /* right swipe */
+            snake.dx = -grid;
+            snake.dy = 0;
+        } else {
+            /* left swipe */
+            snake.dx = grid;
+            snake.dy = 0;
+        }
+    } else {
+        if ( yDiff > 0 ) {
+            /* down swipe */
+            snake.dy = -grid;
+            snake.dx = 0;
+        } else {
+            /* up swipe */
+            snake.dy = grid;
+            snake.dx = 0;
+        }
+    }
+    /* reset values */
+    xDown = null;
+    yDown = null;
+};
 
 // start the game
 requestAnimationFrame(loop);
