--- a/snake.html
+++ b/snake.html
@@ -16,10 +16,10 @@
   }
   canvas {
     border: 1px solid white;
-    overflow: hidden;
+    overflow: clip;
   }
   div {
-    overflow: hidden;
+    overflow: clip;
   }
   </style>
 </head>
