--- a/snake.html
+++ b/snake.html
@@ -13,13 +13,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
   }
   canvas {
     border: 1px solid white;
-    overflow: clip;
   }
   div {
-    overflow: clip;
+    overflow: hidden;
   }
   </style>
 </head>
