--- a/snake.html
+++ b/snake.html
@@ -120,12 +120,12 @@ function loop() {
       snake.maxCells++;
 
       // canvas is 400x400 which is 25x25 grids 
-      apple.x = getRandomInt(0, 25) * grid;
-      apple.y = getRandomInt(0, 25) * grid;
+      apple.x = getRandomInt(0, 30) * grid;
+      apple.y = getRandomInt(0, 30) * grid;
     }
 
-    if (snake.maxCells === 12) {
-        alert("Great Job! Enter 10percentoff at checkout for a discount on your next order.")
+    if (snake.maxCells === 5) {
+        if(!alert("Great Job! Enter 10percentoff at checkout for a discount on your next order.")) window.location.href = "index.html";
     }
 
     // check collision with all cells after this one (modified bubble sort)
@@ -140,8 +140,8 @@ function loop() {
         snake.dx = grid;
         snake.dy = 0;
 
-        apple.x = getRandomInt(0, 25) * grid;
-        apple.y = getRandomInt(0, 25) * grid;
+        apple.x = getRandomInt(0, 30) * grid;
+        apple.y = getRandomInt(0, 30) * grid;
       }
     }
   });
