--- a/products.html
+++ b/products.html
@@ -14,6 +14,7 @@
         <nav class="navbar navbar-expand-lg navbar-custom">
             <div class="container-fluid">
               <a class="navbar-brand" href="#"><img src="assets/logo.png" alt="logo" width="30"></a>
+              <a class="nav-link active" aria-current="page" href="index.html">Super Cool Tech</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -29,10 +30,10 @@
                     <a class="nav-link" href="#">Blog</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
+                    <a class="nav-link" href="about.html">About Us</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                   </li>
                 </ul>
               </div>
