website pages done

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="products.html">Products</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Blog</a>
+                    <a class="nav-link" href="blog.html">Blog</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="about.html">About Us</a>
@@ -80,7 +80,7 @@
                         <div class="card-body">
                           <h5 class="card-title"><button id="easterEgg2">Cool</button></h5>
                           <p class="card-text">If you see an item you'd like us to carry within our directory, feel free to let us know.</p>
-                          <a href="#" class="btn btn-primary">Item Request Form</a>
+                          <a href="contact.html" class="btn btn-primary">Item Request Form</a>
                         </div>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                         <div class="card-body">
                           <h5 class="card-title"><button id="easterEgg3">Tech</button></h5>
                           <p class="card-text">100% Authenticity Guarantee with all items and services or your money back.</p>
-                          <a href="#" class="btn btn-primary">File a Dispute</a>
+                          <a href="contact.html" class="btn btn-primary">File a Dispute</a>
                         </div>
                     </div>
                 </div>
